--- a/backend/sitebuilder/composer.json
+++ b/backend/sitebuilder/composer.json
@@ -15,8 +15,10 @@
         "gedmo/doctrine-extensions": "^3.13",
         "google/apiclient": "^2.17",
         "jms/serializer-bundle": "^3.7.0",
+        "laminas/laminas-code": "4.14.0",
         "lexik/jwt-authentication-bundle": "^2.8",
         "nelmio/cors-bundle": "^2.1",
+        "nesbot/carbon": "^3.7",
         "nzo/url-encryptor-bundle": "^6.2",
         "phpdocumentor/reflection-docblock": "^5.2",
         "predis/predis": "^2.0",
