--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,7 +23,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              { "glob": "**/*", "input": "node_modules/tinymce", "output": "/tinymce/" }
+              { "glob": "**/*", "input": "node_modules/tinymce", "output": "/tinymce/" },
+              { "glob": "bootstrap.min.css","input": "node_modules/bootstrap/dist/css", "output": "/bootstrap/css" }
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
@@ -33,8 +34,10 @@
               "src/app/core/modules/context-menu/directives/style.css",
               "src/assets/admin_lte/plugins/fontawesome-free/css/all.min.css",
               "src/assets/admin_lte/dist/css/custom_adminlte.css",
+              "src/assets/page.css",
               "node_modules/ngx-toastr/toastr.css",
-              "src/assets/nanogallery2/css/nanogallery2.css"
+              "src/assets/nanogallery2/css/nanogallery2.css",
+              "src/assets/fonts.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
