--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
@@ -35,6 +36,7 @@
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "nanogallery2": "^3.0.5",
     "ngx-drag-to-select": "^5.0.1",
