--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,6 +30,8 @@
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "node_modules/ngx-drag-to-select/ngx-drag-to-select.css",
               "src/app/core/modules/context-menu/directives/style.css",
               "src/assets/admin_lte/plugins/fontawesome-free/css/all.min.css",
