--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@types/jqueryui": "^1.12.22",
     "angular-mixed-cdk-drag-drop": "^2.2.3",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.3",
     "document-offset": "^1.0.4",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
@@ -43,6 +44,7 @@
     "ngx-gravatar": "^13.0.0",
     "ngx-toastr": "^19.0.0",
     "nxt-sortablejs": "^17.0.0",
+    "primeng": "^17.18.7",
     "rxjs": "~7.8.0",
     "simplelightbox": "^2.14.3",
     "sortablejs": "^1.15.2",
