--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -34,8 +34,6 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/ngx-drag-to-select/ngx-drag-to-select.css",
               "src/app/core/modules/context-menu/directives/style.css",
-              "src/assets/admin_lte/plugins/fontawesome-free/css/all.min.css",
-              "src/assets/admin_lte/dist/css/custom_adminlte.css",
               "src/assets/page.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/assets/nanogallery2/css/nanogallery2.css",
@@ -44,9 +42,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "src/assets/admin_lte/plugins/jquery-ui/jquery-ui.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "src/assets/admin_lte/dist/js/adminlte.min.js",
               "node_modules/lodash/lodash.min.js",
               "node_modules/youtube-background/jquery.youtube-background.js",
               "node_modules/nanogallery2/dist/jquery.nanogallery2.js"
@@ -75,12 +71,39 @@
               "browser": "src/public-main.ts",
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true,
+              "sourceMap": true
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true,
+              "styles": [
+                "@angular/material/prebuilt-themes/deeppurple-amber.css",
+                "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "src/styles.css",
+                "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+                "node_modules/primeng/resources/primeng.min.css",
+                "node_modules/ngx-drag-to-select/ngx-drag-to-select.css",
+                "src/app/core/modules/context-menu/directives/style.css",
+                "src/assets/page.css",
+                "node_modules/ngx-toastr/toastr.css",
+                "src/assets/nanogallery2/css/nanogallery2.css",
+                "src/assets/fonts.css",
+                "./node_modules/leaflet/dist/leaflet.css",
+                "src/assets/kaiadmin_lte/css/kaiadmin.css"
+              ],
+              "scripts": [
+                "node_modules/jquery/dist/jquery.min.js",
+                "node_modules/jquery/dist/jquery.min.js",
+                "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+                "node_modules/lodash/lodash.min.js",
+                "node_modules/youtube-background/jquery.youtube-background.js",
+                "node_modules/nanogallery2/dist/jquery.nanogallery2.js",
+                "src/assets/kaiadmin_lte/js/plugin/webfont/webfont.min.js",
+                "src/assets/kaiadmin_lte/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js",
+                "src/assets/kaiadmin_lte/js/kaiadmin.js",
+                "src/assets/kaiadmin_lte/js/setting-demo.js"
+              ]
             }
           },
           "defaultConfiguration": "production"
