--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "angular-mixed-cdk-drag-drop": "^2.2.3",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.3",
+    "crypto-js": "^4.2.0",
     "document-offset": "^1.0.4",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
