--- a/backend/sitebuilder/config/packages/cache.yaml
+++ b/backend/sitebuilder/config/packages/cache.yaml
@@ -8,12 +8,14 @@ framework:
         # Other options include:
 
         # Redis
-        #app: cache.adapter.redis
+        app: cache.my_redis
         #default_redis_provider: redis://localhost
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
 
         # Namespaced pools use the above "app" backend by default
-        #pools:
-            #my.dedicated.cache: null
+        pools:
+            cache.my_redis:
+                adapter: cache.adapter.redis
+                provider: app.my_custom_redis_provider
