--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -12,16 +12,17 @@
 #
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-APP_DOMAIN="localhost"
+APP_DOMAIN=""
+APP_EMAIL_DOMAIN=${APP_DOMAIN}
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=7973274c0fecbeeae52f251b332bf746
+APP_SECRET=
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
+MAILER_DSN=
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -34,8 +35,8 @@ MAILER_DSN=smtp://localhost
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_SECRET="fe45g4e45g44454wf552"
-JWT_PASSPHRASE=ac22ea81b158e5a6fdd339ec0a68f076
+JWT_SECRET=""
+JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
 
 ###> nelmio/cors-bundle ###
@@ -43,18 +44,18 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 PUBLIC_SERVER_PORT=8000
 
-DATABASE_PASS="ag58#grg1@G8hR5"
-DB_HOST=10.3.0.3
+DATABASE_PASS=
+DB_HOST=
 
 ###> snc/redis-bundle ###
 # passwords that contain special characters (@, %, :, +) must be urlencoded
-REDIS_HOST=10.3.0.8
-REDIS_PORT=6379
+REDIS_HOST=
+REDIS_PORT=
 ###< snc/redis-bundle ###
 
 ###> nzo/url-encryptor-bundle ###
-NZO_ENCRYPTOR_SECRET=se5g45se4g54F4e
-NZO_ENCRYPTOR_IV=se5g45se4g54F4e
+NZO_ENCRYPTOR_SECRET=
+NZO_ENCRYPTOR_IV=
 ###< nzo/url-encryptor-bundle ###
 
 ###> symfony/lock ###
