--- a/backend/sitebuilder/config/packages/framework.yaml
+++ b/backend/sitebuilder/config/packages/framework.yaml
@@ -20,5 +20,6 @@ framework:
         registration_api:
             # use 'sliding_window' if you prefer that policy
             policy: 'fixed_window'
-            limit: 100
-            interval: '60 minutes'
+            limit: 10
+            interval: '1 minutes'
+            cache_pool: 'cache.my_redis'
