--- a/docker-backend/config/nginx/backend-dev-local/sites-available/default.conf
+++ b/docker-backend/config/nginx/backend-dev-local/sites-available/default.conf
@@ -10,11 +10,20 @@ server {
 
 server {
         listen 80;
-        server_name localhost;
+        server_name admin.localhost;
         root /var/www;
         index admin-index.html;
         location / {
             try_files /frontend/dist/frontend-admin-dev/browser/$uri /frontend/dist/frontend-admin-dev/browser/$uri/ /backend/public/$uri /frontend/dist/frontend-admin-dev/browser/admin-index.html =404;
+        }
+    }
+
+server {
+        listen 80;
+        server_name localhost;
+        root /var/www;
+        location / {
+            try_files /frontend/dist/website-dev/browser/$uri /frontend/dist/website-dev/browser/$uri/ /backend/public/$uri /frontend/dist/website-dev/browser/index.html =404;
         }
     }
 
