--- a/backend/sitebuilder/.env
+++ b/backend/sitebuilder/.env
@@ -13,6 +13,7 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 APP_DOMAIN=""
+APP_WEBSITE_DOMAIN=""
 APP_EMAIL_DOMAIN=${APP_DOMAIN}
 ###> symfony/framework-bundle ###
 APP_ENV=dev
