--- a/backend/sitebuilder/config/packages/security.yaml
+++ b/backend/sitebuilder/config/packages/security.yaml
@@ -24,6 +24,10 @@ security:
             pattern: ^/login
             stateless: true
 
+        website:
+            pattern: ^/website
+            stateless: true
+
         public:
             pattern: ^/page/(get-preview|get-public)
             stateless: true
@@ -50,6 +54,7 @@ security:
 
     access_control:
          - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/website, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/page/get-preview, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/page/get-public, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/plugin/plugin-form/save-data, roles: IS_AUTHENTICATED_ANONYMOUSLY }
