--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -121,6 +121,7 @@
                 "src/assets/website/glightbox.min.css",
                 "src/assets/website/bootstrap.min.css",
                 "src/assets/website/bootstrap-icons.css",
+                "node_modules/ngx-toastr/toastr.css",
                 "src/assets/website/styles.css"
               ],
               "scripts": [
