--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -70,6 +70,7 @@ services:
     App\EventListener\Doctrine\PageBuilder\PageBlockAssignmentListener:
         tags:
             - { name: doctrine.orm.entity_listener, event: postRemove, entity: 'App\Entity\SiteBuilder\PageBlockAssignment' }
+            - { name: doctrine.orm.entity_listener, event: preUpdate, entity: 'App\Entity\SiteBuilder\PageBlockAssignment' }
 
     App\EventListener\Doctrine\PageBuilder\BasePluginListener:
         tags:
