--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -19,61 +19,18 @@
             "polyfills": [
               "zone.js"
             ],
-            "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              { "glob": "**/*", "input": "node_modules/tinymce", "output": "/tinymce/" },
-              { "glob": "bootstrap.min.css","input": "node_modules/bootstrap/dist/css", "output": "/bootstrap/css" }
-            ],
-            "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css",
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/ngx-drag-to-select/ngx-drag-to-select.css",
-              "src/app/core/modules/context-menu/directives/style.css",
-              "src/assets/page.css",
-              "node_modules/ngx-toastr/toastr.css",
-              "src/assets/nanogallery2/css/nanogallery2.css",
-              "src/assets/fonts.css",
-              "./node_modules/leaflet/dist/leaflet.css"
-            ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/lodash/lodash.min.js",
-              "node_modules/youtube-background/jquery.youtube-background.js",
-              "node_modules/nanogallery2/dist/jquery.nanogallery2.js"
-
-            ]
+            "tsConfig": "tsconfig.app.json"
           },
           "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
+            "shared-frontend": {
+              "assets": [
+                "src/favicon.ico",
+                "src/assets/kaiadmin_lte",
+                "src/assets/nanogallery2",
+                "src/assets/shared",
+                { "glob": "**/*", "input": "node_modules/tinymce", "output": "/tinymce/" },
+                { "glob": "bootstrap.min.css","input": "node_modules/bootstrap/dist/css", "output": "/bootstrap/css" }
               ],
-              "outputHashing": "all"
-            },
-            "public-dev": {
-              "outputPath": "dist/frontend-public-dev",
-              "index": "src/app/public/public-index.html",
-              "browser": "src/app/public/public-main.ts",
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true
-            },
-            "development": {
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true,
@@ -102,8 +59,37 @@
                 "src/assets/kaiadmin_lte/js/plugin/webfont/webfont.min.js",
                 "src/assets/kaiadmin_lte/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js",
                 "src/assets/kaiadmin_lte/js/kaiadmin.js",
-                "src/assets/kaiadmin_lte/js/setting-demo.js"
+                "src/assets/kaiadmin_lte/js/setting-demo.js",
+                "src/assets/website/particles.js"
               ]
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            },
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "public-dev": {
+              "outputPath": "dist/frontend-public-dev",
+              "index": "src/app/public/public-index.html",
+              "browser": "src/app/public/public-main.ts",
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
             },
             "website-dev": {
               "outputPath": "dist/website-dev",
@@ -113,7 +99,8 @@
               "extractLicenses": false,
               "sourceMap": false,
               "assets": [
-                "src/assets/website"
+                "src/assets/website",
+                "src/assets/shared"
               ],
               "styles": [
                 "src/assets/website/aos.css",
