--- a/backend/sitebuilder/config/packages/doctrine.yaml
+++ b/backend/sitebuilder/config/packages/doctrine.yaml
@@ -12,6 +12,7 @@ doctrine:
                     enum: string
         types:
             login_type_enum: App\Enum\LoginTypeEnumType
+            menu_item_type_enum: App\Enum\Plugin\Menu\MenuItemTypeEnumType
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
