--- a/backend/sitebuilder/composer.json
+++ b/backend/sitebuilder/composer.json
@@ -48,6 +48,7 @@
         "symfony/string": "5.4.*",
         "symfony/translation": "5.4.*",
         "symfony/twig-bundle": "^5.1",
+        "symfony/uid": "5.4.*",
         "symfony/validator": "5.4.*",
         "symfony/web-link": "5.4.*",
         "symfony/yaml": "5.4.*",
