--- a/backend/sitebuilder/config/packages/doctrine.yaml
+++ b/backend/sitebuilder/config/packages/doctrine.yaml
@@ -11,8 +11,8 @@ doctrine:
                 mapping_types:
                     enum: string
         types:
-            login_type_enum: App\Enum\LoginTypeEnumType
-            menu_item_type_enum: App\Enum\Plugin\Menu\MenuItemTypeEnumType
+            login_type_enum: App\Entity\Util\Enum\LoginTypeEnumType
+            menu_item_type_enum: App\Entity\Util\Enum\Plugin\Menu\MenuItemTypeEnumType
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
