--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -37,7 +37,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\EventListener\RequestJsonToArrayListener:
+    App\EventListener\Request\RequestJsonToArrayListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.request }
+
+    App\EventListener\Request\RequestFileToFormFieldListener:
         tags:
             - { name: kernel.event_listener, event: kernel.request }
 
