--- a/backend/sitebuilder/config/packages/doctrine.yaml
+++ b/backend/sitebuilder/config/packages/doctrine.yaml
@@ -13,6 +13,7 @@ doctrine:
         types:
             login_type_enum: App\Entity\Util\Enum\LoginTypeEnumType
             menu_item_type_enum: App\Entity\Util\Enum\Plugin\Menu\MenuItemTypeEnumType
+            delimiter_type_enum: App\Entity\Util\Enum\Plugin\DelimiterTypeEnumType
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
