--- a/backend/sitebuilder/config/services.yaml
+++ b/backend/sitebuilder/config/services.yaml
@@ -97,6 +97,10 @@ services:
         tags:
             - { name: 'plugin_service', key: 'icon_v1' }
 
+    App\Service\Plugin\Delimiter\DelimiterService:
+        tags:
+            - { name: 'plugin_service', key: 'delimiter_v1' }
+
     App\Service\Plugin\Map\MapService:
         tags:
             - { name: 'plugin_service', key: 'map_v1' }
